Uses ExecutorService instead of ThreadFactory in SmtpServer